# claude-bugfix

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  demo.py  demo_interactive.py  pyproject.toml
config/: default_config.yaml
config/prompts/: system_prompt.txt
docs/: context_compression.md
examples/: demo_compression.py  example_bug.py
src/claude_bugfix/: cli.py
src/claude_bugfix/agent/: __init__.py  agent_loop.py  context_compressor.py  interactive_loop.py  state_manager.py  token_monitor.py
src/claude_bugfix/llm/: client.py  config.py
src/claude_bugfix/tools/: __init__.py  base.py  file_operations.py  registry.py
src/claude_bugfix/utils/: diff_viewer.py  file_utils.py  logger.py
tests/: test_interactive.py
tests/test_agent/: test_context_compression.py
tests/test_tools/: test_file_operations.py
